--- a/configs/FS_to_MNI.config
+++ b/configs/FS_to_MNI.config
@@ -18,7 +18,7 @@
 	CBIG_preproc_regress -whole_brain -wm -csf -motion12_itamar -detrend_method detrend -per_run -censor -polynomial_fit 1
 
 # Remove high motion frames (Power-style scrubbing):
-	CBIG_preproc_censor -max_mem NONE
+	CBIG_preproc_censor -max_mem 8
 
 # Band-pass filtering:
 	CBIG_preproc_bandpass -low_f 0.009 -high_f 0.08 -detrend 
