--- a/configs/Legacy.config
+++ b/configs/Legacy.config
@@ -14,14 +14,17 @@
 # BBregister each run and use matrix with lower bbr cost if needed:
 	CBIG_preproc_bbregister
 
+# Band-pass filtering:
+        CBIG_preproc_bandpass -low_f 0.009 -high_f 0.08 -detrend
+
 # Regression for Functional Connectivity:
-	CBIG_preproc_regress -whole_brain -wm -csf -motion12_itamar -detrend_method detrend -per_run -polynomial_fit 1
+	CBIG_preproc_regress -whole_brain -wm -csf -motion12_itamar -detrend_method detrend -per_run -polynomial_fit 1 -erode_space func -wm_max_erode 1 -csf_max_erode 0
 
 # Remove high motion frames (Power-style scrubbing):
 #	CBIG_preproc_censor -max_mem 8
 
 # Band-pass filtering:
-	CBIG_preproc_bandpass -low_f 0.009 -high_f 0.08 -detrend 
+#	CBIG_preproc_bandpass -low_f 0.009 -high_f 0.08 -detrend 
 
 # Create Carpet plots for QC purposes:
 #	CBIG_preproc_QC_greyplot -FD_th 0.2 -DV_th 50
