--- a/configs/Legacy_dblsmooth_fwhm8.config
+++ b/configs/Legacy_dblsmooth_fwhm8.config
@@ -9,19 +9,19 @@
 	CBIG_preproc_fslslicetimer -slice_timing ${st_file}
 
 # Motion Correction:
-	CBIG_preproc_fslmcflirt_outliers -FD_th 0.2 -DV_th 50 -discard-run 50 -rm-seg 5 -spline_final
+	CBIG_preproc_fslmcflirt_outliers -FD_th 0.2 -DV_th 50 -discard-run 75
 
 # BBregister each run and use matrix with lower bbr cost if needed:
 	CBIG_preproc_bbregister
 
 # Band-pass filtering:
-        CBIG_preproc_bandpass -low_f 0.0001 -high_f 0.08 -detrend
+        CBIG_preproc_bandpass -low_f 0.009 -high_f 0.08 -detrend
 
 # Regression for Functional Connectivity:
-	CBIG_preproc_regress -whole_brain -wm -csf -motion12_itamar -detrend_method detrend -censor -polynomial_fit 1 -erode_space func -wm_max_erode 1 -csf_max_erode 0
+	CBIG_preproc_regress -whole_brain -wm -csf -motion12_itamar -detrend_method detrend -per_run -polynomial_fit 1 -erode_space func -wm_max_erode 1 -csf_max_erode 0
 
 # Remove high motion frames (Power-style scrubbing):
-	CBIG_preproc_censor -max_mem 16
+#	CBIG_preproc_censor -max_mem 8
 
 # Band-pass filtering:
 #	CBIG_preproc_bandpass -low_f 0.009 -high_f 0.08 -detrend 
@@ -30,11 +30,10 @@
 #	CBIG_preproc_QC_greyplot -FD_th 0.2 -DV_th 50
 
 # Project fMRI to fsaverage6:
-#	CBIG_preproc_native2fsaverage -proj fsaverage6 -sm 6 -down fsaverage5
+#	CBIG_preproc_native2fsaverage -proj fsaverage6 -sm 8 -down fsaverage5
 
 # Project fMRI to MNI using ants:
-#	CBIG_preproc_native2mni_ants -sm_mask ${FSL_DIR}/data/standard/MNI152_T1_2mm_brain_mask_dil.nii.gz -final_mask ${FSL_DIR}/data/standard/MNI152_T1_2mm_brain_mask_dil.nii.gz
+#	CBIG_preproc_native2mni_ants -sm_mask ${CBIG_CODE_DIR}/data/templates/volume/FS_nonlinear_volumetric_space_4.5/SubcortCerebellumWhiteMask.GCA.t0.5_resampled.nii.gz -final_mask ${FSL_DIR}/data/standard/MNI152_T1_2mm_brain_mask_dil.nii.gz
 
 # Project fMRI to MNI using freesurfer:
-	CBIG_preproc_native2mni -down FSL_MNI_2mm -sm 6 -sm_mask ${CBIG_CODE_DIR}/data/templates/volume/FS_nonlinear_volumetric_space_4.5/SubcortCerebellumWhiteMask.GCA.t0.5_resampled.nii.gz -final_mask ${FSL_DIR}/data/standard/MNI152_T1_2mm_brain_mask_dil.nii.gz
-
+	CBIG_preproc_native2mni -down FSL_MNI_2mm -sm 8 -sm_mask ${CBIG_CODE_DIR}/data/templates/volume/FS_nonlinear_volumetric_space_4.5/SubcortCerebellumWhiteMask.GCA.t0.5_resampled.nii.gz -final_mask ${FSL_DIR}/data/standard/MNI152_T1_2mm_brain_mask_dil.nii.gz
